package rubble.rpc.test_proto;

message Request
{
  optional string req = 1;
}

message Response
{
  optional string res = 1;
}

service test_service_one
{
  rpc dummy_rpc (Request) returns (Response);
}
